updating some tables to use new scheme (packages, etc.)
