# CipherData/ChangedOpenAPI.yaml
@@ -685,6 +685,24 @@ paths:
           description: Not found
           $ref: "#/components/responses/ErrorResponse"
   /events:
+    get:
+      summary: Get all events
+      operationId: getEvents
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:
+                  $ref: "#/components/schemas/Event"
+        '400':
+          description: Bad request
+          $ref: "#/components/responses/ErrorResponse"
+        '401':
+          description: Unauthorized
+          $ref: "#/components/responses/ErrorResponse"
     post:
       summary: Create a new event
       operationId: createEvent
