# CipherData/Requests/ProcessRequests.cs
@@ -13,7 +13,7 @@ namespace CipherData.Requests
         /// Get details about a process.
         /// Path: Get /processes/{id}
         /// </summary>
-        public static Tuple<Process?, ErrorResponse> GetProcess(string proc_id)
+        public static Tuple<Process, ErrorResponse> GetProcess(string proc_id)
         {
             return GenericRequests.Request(Process.Random(), canBeNotFound: true, canBadRequest:false);
         }
@@ -22,7 +22,7 @@ namespace CipherData.Requests
         /// Update Unit's details
         /// Path: PUT /processDefinitions/{id}
         /// </summary>
-        public static Tuple<ProcessDefinition?, ErrorResponse> UpdateProcessDefinition(string proc_id, ProcessDefinitionRequest proc)
+        public static Tuple<ProcessDefinition, ErrorResponse> UpdateProcessDefinition(string proc_id, ProcessDefinitionRequest proc)
         {
             return GenericRequests.Request(ProcessDefinition.Random(), canBeNotFound: true);
         }
